--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>React App</title>
+    <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,&display=swap"
+    rel="stylesheet"/>
+    <title>Box Office</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
